# setu

./: .coderabbit.yaml  .readthedocs.yaml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  NOTICE.md  README.md  environment-dev.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build_dev_container.yml  build_wheels.yml  lint.yml  pr_reminder.yml  publish_nightly.yml  publish_release.yml  test_suite.yml
cmake/: CondaDetection.cmake  Dependencies.cmake  Extensions.cmake  Testing.cmake
csrc/setu/client/: Client.cpp  Client.h  Pybind.cpp
csrc/setu/commons/: BoostCommon.h  ClassTraits.h  Constants.h  Formatter.h  LogLevels.h  Logging.cpp  Logging.h  PrecompiledCommonHeaders.h  Pybind.cpp  QueueUtils.h  StdCommon.h  Time.h  TorchCommon.h  Types.h  ZmqCommon.h
csrc/setu/commons/datatypes/: CopyIntent.h  CopySpec.h  Device.cpp  Device.h  Pybind.cpp  Pybind.h  TensorDim.h  TensorDimShard.h  TensorMetadata.h  TensorOwnershipMap.cpp  TensorOwnershipMap.h  TensorSelection.cpp  TensorSelection.h  TensorShard.cpp  TensorShard.h  TensorShardHandle.h  TensorShardIdentifier.cpp  TensorShardIdentifier.h  TensorShardMetadata.cpp  TensorShardMetadata.h  TensorShardRef.h  TensorShardSpec.cpp  TensorShardSpec.h  TensorSlice.h
csrc/setu/commons/enums/: Enums.h  Pybind.cpp  Pybind.h
csrc/setu/commons/messages/: AllocateTensorRequest.cpp  AllocateTensorRequest.h  AllocateTensorResponse.cpp  AllocateTensorResponse.h  BaseRequest.h  BaseResponse.h  CopyOperationFinishedRequest.cpp  CopyOperationFinishedRequest.h  CopyOperationFinishedResponse.cpp  CopyOperationFinishedResponse.h  ExecuteProgramRequest.h  ExecuteProgramResponse.cpp  ExecuteProgramResponse.h  ExecuteRequest.cpp  ExecuteRequest.h  ExecuteResponse.cpp  ExecuteResponse.h  GetTensorHandle.cpp  GetTensorHandleRequest.h  GetTensorHandleResponse.h  Messages.h  Pybind.cpp  RegisterTensorShardRequest.cpp  RegisterTensorShardRequest.h  RegisterTensorShardResponse.cpp  RegisterTensorShardResponse.h  SubmitCopyRequest.cpp  SubmitCopyRequest.h  SubmitCopyResponse.cpp  SubmitCopyResponse.h  WaitForCopyRequest.cpp  WaitForCopyRequest.h  WaitForCopyResponse.cpp  WaitForCopyResponse.h
csrc/setu/commons/utils/: BaseRegistry.h  CUDAUtils.cpp  CUDAUtils.h  Comm.h  ContiguousBufferIterator.cpp  ContiguousBufferIterator.h  HashUtils.cpp  HashUtils.h  JsonSerialization.h  NetworkUtils.cpp  NetworkUtils.h  NumericalUtils.cpp  NumericalUtils.h  Pybind.cpp  Pybind.h  Serialization.h  SetuCommHelper.h  TempFile.cpp  TempFile.h  TensorShardUtils.h  ThreadingUtils.h  TorchTensorIPC.cpp  TorchTensorIPC.h  TorchUtils.cpp  TorchUtils.h  ZmqHelper.h
csrc/setu/coordinator/: Coordinator.cpp  Coordinator.h  Pybind.cpp
csrc/setu/coordinator/datatypes/: CopyOperation.h  Program.h  Pybind.cpp  Pybind.h  TensorMetadata.h  TensorOwnershipMap.cpp  TensorOwnershipMap.h  TensorShardUtils.h
csrc/setu/ir/: Instruction.cpp  Instruction.h  Pybind.cpp  Pybind.h
csrc/setu/ir/instructions/: Copy.cpp  Copy.h  InitComm.cpp  (+7 more)
csrc/setu/kernels/: DispatchUtils.h  PrecompiledKernelHeaders.h  Pybind.cpp  ReductionUtils.cuh  Sum.cu  Sum.h
csrc/setu/metastore/: MetaStore.cpp  MetaStore.h
csrc/setu/node_manager/: NodeAgent.cpp  NodeAgent.h  PrecompiledCommonHeaders.h  Pybind.cpp
csrc/setu/planner/: Planner.cpp  Planner.h
csrc/test/kernels/: SampleKernelTest.cpp
csrc/test/native/: ContiguousBufferIteratorTest.cpp  PrepareTensorIPCHandleTest.cpp  SampleNativeTest.cpp
docker/containers/: README.md
docker/containers/dev/: Dockerfile  Makefile  README.md
docs/: conf.py
docs/contributing/style_guides/: cpp_style_guide.md
docs/design/: index.md
examples/: pd_disaggregation.py  register_allocate_get_handle_flow.py  register_tensor_shard_flow.py
scripts/containers/: utils.sh
scripts/containers/dev/: setup_env.sh
scripts/dev/: build_env.sh  lint.sh  test.sh
scripts/infra/: github-runner.service  launch_runners.sh  runner_spec.json  setup.sh  stop_runners.sh
setu/: logger.py
setu/client/: __init__.py  client.py  tensor_handles.py  tensor_selection.py
setu/core/: types.py
setu/utils/: __init__.py  collect_env.py
test/: test_client_node_agent.py  test_nccl_worker.py  test_tensor_ipc.py
test/unit/: test_setu_core.py
toy/nccl_backend/: CMakeLists.txt  copy_spec.h  cuda_helpers.h  main.cpp  node_agent.cpp  node_agent.h  planner.cpp  planner.h  tensor.h  worker.cpp  worker.h
(+20 files in other folders)
